--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,5 +17,10 @@
             android:layout_width="wrap_content"
             android:text="测试1"
             android:layout_height="wrap_content" />
+        <Button
+            android:id="@+id/timetask"
+            android:layout_width="wrap_content"
+            android:text="测试TimeTask"
+            android:layout_height="wrap_content" />
     </LinearLayout>
 </RelativeLayout>
