--- a/app/src/main/res/layout/test_time_task_fragment.xml
+++ b/app/src/main/res/layout/test_time_task_fragment.xml
@@ -1,19 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
+    android:padding="20dp"
     android:layout_height="match_parent">
 
-    <TextView
+    <Button
+        android:text="开始"
+        android:id="@+id/start"
         android:layout_width="wrap_content"
-        android:text="我就是任性的fragment"
-        android:textColor="#0f0"
-        android:textSize="30sp"
         android:layout_height="wrap_content" />
     <Button
-        android:id="@+id/share"
+        android:text="停止"
+        android:id="@+id/end"
         android:layout_width="wrap_content"
-        android:text="点击分享微信"
+        android:layout_height="wrap_content" />
+
+    <TextView
+        android:id="@+id/show_text"
+        android:hint="回调后显示文字"
+        android:textSize="15sp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
 </LinearLayout>
-
