--- a/app/src/main/res/layout/test_social_fragment.xml
+++ b/app/src/main/res/layout/test_social_fragment.xml
@@ -15,5 +15,10 @@
         android:text="点击分享微信"
         android:layout_height="wrap_content" />
 
+    <Button
+        android:id="@+id/share_qq"
+        android:layout_width="wrap_content"
+        android:text="点击分享到QQ"
+        android:layout_height="wrap_content" />
 </LinearLayout>
 
