--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,5 +22,10 @@
             android:layout_width="wrap_content"
             android:text="测试TimeTask"
             android:layout_height="wrap_content" />
+        <Button
+            android:layout_width="wrap_content"
+            android:text="带有头布局的ViewPager"
+            android:id="@+id/have_header_viewpager"
+            android:layout_height="wrap_content" />
     </LinearLayout>
 </RelativeLayout>
