--- a/app/src/main/res/layout/test_activity_main.xml
+++ b/app/src/main/res/layout/test_activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -28,4 +28,4 @@
             android:id="@+id/have_header_viewpager"
             android:layout_height="wrap_content" />
     </LinearLayout>
-</RelativeLayout>
+</ScrollView>
