增加fragmenttabhost公用版

--- a/testgutils/src/main/res/layout/linshi_frag1.xml
+++ b/testgutils/src/main/res/layout/linshi_frag1.xml
@@ -3,9 +3,11 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <FrameLayout
+    <fragment
         android:layout_width="match_parent"
-        android:id="@+id/content_fragment"
-        android:layout_height="match_parent"></FrameLayout>
+        android:layout_height="match_parent"
+        android:tag="frag1"
+        class="com.gzp1124.lib_ui.MainFragmentTabHostFragment"
+        />
 
 </LinearLayout>
