--- a/testgutils/src/main/res/layout/test_tabhost_frag.xml
+++ b/testgutils/src/main/res/layout/test_tabhost_frag.xml
@@ -1,17 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <Button
-        android:id="@+id/one"
+    <TextView
         android:layout_width="wrap_content"
-        android:text="一屏"
+        android:id="@+id/text"
+        android:gravity="center"
+        android:textSize="40sp"
+        tools:text="Test"
         android:layout_height="wrap_content" />
 
-    <Button
-        android:id="@+id/more"
-        android:layout_width="wrap_content"
-        android:text="多屏"
-        android:layout_height="wrap_content" />
 </LinearLayout>
