--- a/lib_ui/src/main/res/layout/main_fragment_tab_host.xml
+++ b/lib_ui/src/main/res/layout/main_fragment_tab_host.xml
@@ -16,10 +16,14 @@
             android:layout_height="0dp"
             android:layout_weight="1"/>
 
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="0.5dp"
+            android:background="#55000000"/>
         <TabWidget
             android:id="@android:id/tabs"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="?attr/actionBarSize"
             android:layout_gravity="center"/>
 
     </LinearLayout>
