--- a/lib_ui/src/main/res/layout/main_fragment_tab_layout.xml
+++ b/lib_ui/src/main/res/layout/main_fragment_tab_layout.xml
@@ -6,18 +6,15 @@
 
     <ImageView
         android:id="@+id/tab_iv_image"
-        android:padding="4dp"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+        android:layout_width="38dp"
+        android:layout_height="38dp"
         android:layout_gravity="center"
-        android:contentDescription="@null"
         tools:src="@drawable/tab_assistant"/>
     <TextView
         android:layout_width="match_parent"
         android:id="@+id/tab_text"
-        android:gravity="center_horizontal"
-        android:textSize="13sp"
-        android:layout_marginBottom="5dp"
+        android:gravity="center_horizontal|top"
+        android:textSize="11sp"
         android:layout_height="wrap_content" />
 
 </LinearLayout>
