--- a/testgutils/src/main/res/layout/test_fragment_tab_host.xml
+++ b/testgutils/src/main/res/layout/test_fragment_tab_host.xml
@@ -1,16 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:background="#fff"
+    android:orientation="vertical"
     android:layout_height="match_parent">
+
+<!--    <android.support.design.widget.AppBarLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="24dp"/>
+
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="#33000000"
+            app:layout_scrollFlags="scroll"
+            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
+
+    </android.support.design.widget.AppBarLayout>-->
 
     <fragment
         android:id="@+id/ff"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:tag="main"
-        class="com.gzp1124.lib_ui.MainFragmentTabHostFragment"
+        class="com.gzp1124.lib_ui.fragment_tab_host.MainFragmentTabHostFragment"
         />
 
 </LinearLayout>
