--- a/lib_ui/src/main/res/layout/tab_layout_bottom_fragment_fragment.xml
+++ b/lib_ui/src/main/res/layout/tab_layout_bottom_fragment_fragment.xml
@@ -5,14 +5,14 @@
     android:layout_height="match_parent">
 
     <FrameLayout
-        android:id="@+id/content_fragment"
+        android:id="@+id/fl_change"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1">
     </FrameLayout>
 
-    <!--<com.gzp1124.lib_ui.tab_layout.CommonTabLayout
-        android:id="@+id/tab_layout"
+    <com.gzp1124.lib_ui.tab_layout.CommonTabLayout
+        android:id="@+id/tl_3"
         android:layout_width="match_parent"
         android:layout_height="48dp"
         android:background="#ffffff"
@@ -28,19 +28,6 @@
         tl:tl_textsize="15sp"
         tl:tl_underline_color="#DDDDDD"
         tl:tl_underline_gravity="TOP"
-        tl:tl_underline_height="1dp"/>-->
-    <com.gzp1124.lib_ui.tab_layout.CommonTabLayout
-        android:id="@+id/tab_layout"
-        android:layout_width="match_parent"
-        android:layout_height="54dp"
-        android:background="#ffffff"
-        tl:tl_iconHeight="23dp"
-        tl:tl_iconWidth="23dp"
-        tl:tl_indicator_color="#2C97DE"
-        tl:tl_indicator_height="0dp"
-        tl:tl_textSelectColor="#2C97DE"
-        tl:tl_textUnselectColor="#66000000"
-        tl:tl_textsize="12sp"
-        tl:tl_underline_color="#DDDDDD"
         tl:tl_underline_height="1dp"/>
+
 </LinearLayout>
