--- a/lib_ui/src/main/res/layout/tab_layout_up_fragment_f.xml
+++ b/lib_ui/src/main/res/layout/tab_layout_up_fragment_f.xml
@@ -4,22 +4,22 @@
     xmlns:tl="http://schemas.android.com/apk/res-auto"
     android:layout_height="match_parent">
     <com.gzp1124.lib_ui.tab_layout.SegmentTabLayout
-        android:id="@+id/tab_layout"
-        android:layout_width="match_parent"
+        android:id="@+id/tl_4"
+        android:layout_width="wrap_content"
         android:layout_height="36dp"
         android:layout_gravity="center_horizontal"
-        android:paddingLeft="30dp"
-        android:paddingRight="30dp"
-        tl:tl_indicator_anim_enable="true"
-        tl:tl_indicator_bounce_enable="false"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
+        tl:tl_bar_color="#ffffff"
+        tl:tl_indicator_color="#EC7263"
         tl:tl_indicator_margin_bottom="2dp"
         tl:tl_indicator_margin_left="2dp"
         tl:tl_indicator_margin_right="2dp"
         tl:tl_indicator_margin_top="2dp"
-        tl:tl_tab_space_equal="true"/>
+        tl:tl_tab_width="80dp"/>
 
     <FrameLayout
-        android:id="@+id/content_fragment"
+        android:id="@+id/fl_change"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"/>
