--- a/testgutils/src/main/res/layout/test_tab_layout_2.xml
+++ b/testgutils/src/main/res/layout/test_tab_layout_2.xml
@@ -7,6 +7,7 @@
     <android.support.v4.view.ViewPager
         android:id="@+id/vp_2"
         android:layout_width="match_parent"
+        android:visibility="gone"
         android:layout_height="84dp"/>
 
     <com.gzp1124.lib_ui.tab_layout.CommonTabLayout
@@ -22,12 +23,14 @@
         tl:tl_textUnselectColor="#66000000"
         tl:tl_textsize="12sp"
         tl:tl_underline_color="#DDDDDD"
+        android:visibility="gone"
         tl:tl_underline_height="1dp"/>
 
     <FrameLayout
         android:id="@+id/fl_change"
         android:layout_width="match_parent"
-        android:layout_height="84dp">
+        android:layout_height="0dp"
+        android:layout_weight="1">
     </FrameLayout>
 
     <com.gzp1124.lib_ui.tab_layout.CommonTabLayout
@@ -52,6 +55,7 @@
     <com.gzp1124.lib_ui.tab_layout.CommonTabLayout
         android:id="@+id/tl_4"
         android:layout_width="match_parent"
+        android:visibility="gone"
         android:layout_height="48dp"
         android:background="#F6CE59"
         tl:tl_iconVisible="false"
@@ -66,6 +70,7 @@
         tl:tl_iconVisible="false"
         tl:tl_indicator_corner_radius="2dp"
         tl:tl_indicator_height="4dp"
+        android:visibility="gone"
         tl:tl_indicator_width="4dp"
         tl:tl_textsize="14sp"/>
 
@@ -73,6 +78,7 @@
         android:id="@+id/tl_6"
         android:layout_width="match_parent"
         android:layout_height="48dp"
+        android:visibility="gone"
         android:background="#57385C"
         tl:tl_iconVisible="false"
         tl:tl_indicator_corner_radius="1.5dp"
@@ -86,6 +92,7 @@
         android:layout_height="48dp"
         android:background="#E45171"
         tl:tl_iconVisible="false"
+        android:visibility="gone"
         tl:tl_indicator_color="#eeeeee"
         tl:tl_indicator_corner_radius="1.5dp"
         tl:tl_indicator_height="3dp"
@@ -97,6 +104,7 @@
         android:id="@+id/tl_8"
         android:layout_width="match_parent"
         android:layout_height="48dp"
+        android:visibility="gone"
         android:background="#6D8FB0"
         android:paddingLeft="5dp"
         android:paddingRight="5dp"
