--- a/lib_gutils/src/main/res/values/styles.xml
+++ b/lib_gutils/src/main/res/values/styles.xml
@@ -28,4 +28,9 @@
         <item name="@android:windowExitAnimation">@anim/gtoast_center_anim_out</item>
     </style>
 
+    <style name="Animation.Toast" parent="@android:style/Animation">
+        <item name="android:windowEnterAnimation">@anim/toast_enter</item>
+        <item name="android:windowExitAnimation">@anim/toast_exit</item>
+    </style>
+
 </resources>
