--- a/testgutils/src/main/res/layout/test_activity_show.xml
+++ b/testgutils/src/main/res/layout/test_activity_show.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -8,4 +8,11 @@
         android:id="@+id/content_fragment"
         android:layout_height="match_parent"></FrameLayout>
 
-</LinearLayout>
+    <Button
+        android:id="@+id/testbtn"
+        android:layout_width="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:text="测试按钮"
+        android:visibility="invisible"
+        android:layout_height="wrap_content" />
+</RelativeLayout>
